[gd_scene format=3 uid="uid://hyeh47v46j86"]

[ext_resource type="Script" uid="uid://eijqsjxei6sx" path="res://Enemies/TestEnemy/test_enemy.gd" id="1_2u0nj"]
[ext_resource type="PackedScene" uid="uid://dcq4u4hsq0jim" path="res://Effects/hit_particles.tscn" id="2_tsyqh"]
[ext_resource type="AudioStream" uid="uid://dw3f1fuukuip4" path="res://Audio/Enemies/enemy1/enemy1_takingdamage.wav" id="3_602qh"]
[ext_resource type="PackedScene" uid="uid://53j4p5pwrd5v" path="res://Enemies/TestEnemy/isaacRobot.glb" id="4_oqxki"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_p28x0"]
radius = 0.69384766
height = 2.4718125

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2u0nj"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_e511w"]
material = SubResource("StandardMaterial3D_2u0nj")

[node name="testEnemy" type="CharacterBody3D" unique_id=1048089377 groups=["character", "enemy"]]
script = ExtResource("1_2u0nj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=1699424102]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.35824215, 0)
shape = SubResource("CapsuleShape3D_p28x0")

[node name="isaacRobot" parent="." unique_id=1647446196 instance=ExtResource("4_oqxki")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, -0.875, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="." unique_id=681873625]
visible = false
mesh = SubResource("CapsuleMesh_e511w")

[node name="Head" type="Node3D" parent="." unique_id=25793801]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="ShootPoint" type="Marker3D" parent="Head" unique_id=454517184]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.57257986, -1.5071368)

[node name="HitParticles" parent="." unique_id=1875539030 instance=ExtResource("2_tsyqh")]

[node name="HitSound" type="AudioStreamPlayer3D" parent="." unique_id=1741123554]
stream = ExtResource("3_602qh")

[node name="ShootTimer" type="Timer" parent="." unique_id=795125958]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
